--- a/src/style/components/branding.scss
+++ b/src/style/components/branding.scss
@@ -5,8 +5,8 @@
     }
 
     &-tagline {
-        font-size: 1.4rem;
-        font-weight: 700;
+        font-size: $size-small;
+        font-weight: $weight-bold;
         letter-spacing: .3em;
     }
 }
