--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -5,5 +5,7 @@
 @import "base/typography";
 
 @import "components/branding";
+@import "components/button";
 
 @import "modules/hero";
+@import "modules/couple";
