--- a/src/style/base/layout.scss
+++ b/src/style/base/layout.scss
@@ -1,14 +1,10 @@
 * { box-sizing: border-box; }
 
-html,
-body {
-    height: 100vh;
-    overflow: hidden;
-}
+body { background: $gray-light; }
 
 .contentWrap {
     width: 100%;
-    max-width: 1400px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
 }
