--- a/src/style/modules/hero.scss
+++ b/src/style/modules/hero.scss
@@ -6,8 +6,8 @@
     flex-flow: column nowrap;
     justify-content: center;
     position: relative;
-    padding-top: 32vh;
-    height: 100vh;
+    padding-top: 8vh;
+    height: 90vh;
 
     > * { z-index: 5; }
 
@@ -37,26 +37,18 @@
 
     &-details {
         &-date {
-            font-size: 2.8rem;
-            font-weight: 900;
+            font-size: $size-xlarge;
+            font-weight: $weight-extrabold;
             color: $white;
             letter-spacing: .2em;
             margin: 0;
         }
 
         &-location {
-            font-size: 1.1rem;
-            font-weight: 700;
+            font-size: $size-xsmall;
+            font-weight: $weight-bold;
             letter-spacing: .3em;
             margin: .5em 0 0;
         }
-    }
-
-    &-comingSoon {
-        font-size: 0.9rem;
-        font-weight: 700;
-        letter-spacing: .3em;
-        margin-top: 6vh;
-        color: $white;
     }
 }
