--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,4 +1,5 @@
 {{!< default}}
+
 <section class="hero">
 	<span class="hero-bg hero-bg--overlay"></span>
 	<span class="hero-bg hero-bg--image" style="background-image: url({{{cl "url" "jm-wedding/hero-bg" transformation="background-full"}}});"></span>
@@ -6,16 +7,26 @@
 	<div class="contentWrap">
 		<div class="branding">
 			<h1 class="branding-logo">Josh &amp; Mere</h1>
-			<p class="branding-tagline">are getting married!</p>
+			<p class="branding-tagline">{{site_tagline.md}}</p>
 		</div>
 
 		<span class="hero-divider"></span>
 
 		<div class="hero-details">
-			<p class="hero-details-date">10.08.17</p>
-			<p class="hero-details-location">At Drumore Estate</p>
+			<p class="hero-details-date">{{event_date.md}}</p>
+			<p class="hero-details-location">At {{venue_name.md}}</p>
 		</div>
-
-		<p class="hero-comingSoon">More information coming soon!</p>
 	</div>
+</section>
+
+<section id="the-couple" class="theCouple">
+    <div class="contentWrap theCouple-content">
+        <div class="theCouple-primary">
+            <h2 class="theCouple-title u-title">{{couple_title.md}}</h2>
+            {{{couple_content.html}}}
+        </div>
+        <div class="theCouple-secondary" style="background-image: url('{{{cl "url" "jm-wedding/couple" gravity="faces" crop="fill" width=800 height=1200}}}');">
+            <a href="https://mattnnatblog.com/engagements/lititz-springs-park-engagement-meredith-josh/" class="button theCouple-photos">{{couple_photo_btn.md}}</a>
+        </div>
+    </div>
 </section>
