--- a/src/style/base/variables.scss
+++ b/src/style/base/variables.scss
@@ -22,6 +22,7 @@ $scaling-title: 2;
 
 // Font Weights
 $weight-regular: 400;
+$weight-medium: 600;
 $weight-bold: 700;
 $weight-extrabold: 900;
 
@@ -29,7 +30,7 @@ $weight-extrabold: 900;
 $leading-none: 1;
 $leading-tight: 1.2;
 $leading-regular: 1.4;
-$leading-loose: 1.6;
+$leading-loose: 1.7;
 
 // Speeds
 $speed-fast: .2s;
