--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -6,6 +6,8 @@
 
 @import "components/branding";
 @import "components/button";
+@import "components/overlay-block";
 
 @import "modules/hero";
 @import "modules/couple";
+@import "modules/venue";
