--- a/public/site.css
+++ b/public/site.css
@@ -458,7 +458,7 @@ body {
   font-family: "proxima-nova", "Helvetica", "Arial", sans-serif;
   font-size: 1.6rem;
   font-weight: 400;
-  line-height: 1.6; }
+  line-height: 1.7; }
   @media (min-width: 960px) {
     body {
       font-size: 1.4rem; } }
@@ -468,6 +468,13 @@ body {
   font-size: 4.8rem;
   font-weight: 400;
   line-height: 1.2;
+  margin: 0; }
+
+.u-leadIn {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .7em;
   margin: 0; }
 
 .branding-logo {
@@ -493,7 +500,30 @@ body {
   -webkit-transition: background 0.4s ease-out;
   transition: background 0.4s ease-out; }
   .button:hover {
-    background: rgba(49, 48, 58, 0.6); }
+    background: rgba(49, 48, 58, 0.65); }
+
+.overlayBlock {
+  position: relative; }
+  .overlayBlock > * {
+    position: relative;
+    z-index: 5; }
+  .overlayBlock-bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+    .overlayBlock-bg--image {
+      z-index: 0;
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      -webkit-filter: saturate(0.5);
+              filter: saturate(0.5); }
+    .overlayBlock-bg--overlay {
+      z-index: 1;
+      opacity: .8;
+      background: #31303A; }
 
 .hero {
   color: #ADA3B3;
@@ -512,26 +542,9 @@ body {
   position: relative;
   padding-top: 8vh;
   height: 90vh; }
-  .hero > * {
-    z-index: 5; }
-  .hero-bg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0; }
-    .hero-bg--image {
-      z-index: 0;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      -webkit-filter: saturate(0.5);
-              filter: saturate(0.5); }
-    .hero-bg--overlay {
-      z-index: 1;
-      opacity: .8;
-      background: -webkit-linear-gradient(left bottom, #242147, #AC5858);
-      background: linear-gradient(to right top, #242147, #AC5858); }
+  .hero .overlayBlock-bg--overlay {
+    background: -webkit-linear-gradient(left bottom, #242147, #AC5858);
+    background: linear-gradient(to right top, #242147, #AC5858); }
   .hero-divider {
     width: 9.3rem;
     height: 1.4rem;
@@ -552,9 +565,7 @@ body {
     margin: .5em 0 0; }
 
 .theCouple {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-bottom: 100px; }
+  padding: 0 15px 60px; }
   .theCouple-content {
     margin-top: -10vh;
     padding: 0;
@@ -606,5 +617,38 @@ body {
       -ms-flex-item-align: center;
           -ms-grid-row-align: center;
           align-self: center; } }
+
+.theVenue {
+  text-align: center;
+  color: #E4E1E6;
+  padding: 60px 0;
+  background: #31303A; }
+  .theVenue .overlayBlock-bg--image {
+    -webkit-filter: saturate(0);
+            filter: saturate(0);
+    background-size: auto;
+    background-position: center top; }
+  .theVenue .overlayBlock-bg--overlay {
+    opacity: 1;
+    background: -webkit-linear-gradient(top, rgba(49, 48, 58, 0.8), #31303A 350px);
+    background: linear-gradient(to bottom, rgba(49, 48, 58, 0.8), #31303A 350px); }
+  .theVenue a {
+    color: #AC5858;
+    -webkit-transition: color 0.2s ease-out;
+    transition: color 0.2s ease-out; }
+    .theVenue a:hover {
+      color: #ADA3B3; }
+  .theVenue-leadIn {
+    color: #AC5858; }
+  .theVenue-title {
+    color: #FFFFFF; }
+  .theVenue-address, .theVenue-directions {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: .4em;
+    color: #FFFFFF;
+    line-height: 2.55;
+    margin-top: 2em; }
 
 /*# sourceMappingURL=site.css.map*/
