--- a/src/style/modules/couple.scss
+++ b/src/style/modules/couple.scss
@@ -1,7 +1,5 @@
 .theCouple{
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-bottom: 100px;
+    padding: 0 15px 60px;
     
     &-content {
         margin-top: -10vh;
