--- a/src/style/modules/hero.scss
+++ b/src/style/modules/hero.scss
@@ -9,24 +9,8 @@
     padding-top: 8vh;
     height: 90vh;
 
-    > * { z-index: 5; }
-
-    &-bg {
-        @include position(absolute, 0 0 0 0);
-
-        &--image {
-            z-index: 0;
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            filter: saturate(.5);
-        }
-
-        &--overlay {
-            z-index: 1;
-            opacity: .8;
-            background: linear-gradient(to right top, $secondary, $primary);
-        }
+    .overlayBlock-bg--overlay {
+        background: linear-gradient(to right top, $secondary, $primary);
     }
 
     &-divider {
