--- a/public/site.css
+++ b/public/site.css
@@ -622,7 +622,18 @@ body {
   text-align: center;
   color: #E4E1E6;
   padding: 60px 0;
-  background: #31303A; }
+  background: #31303A;
+  min-height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .theVenue .overlayBlock-bg--image {
     -webkit-filter: saturate(0);
             filter: saturate(0);
@@ -650,5 +661,67 @@ body {
     color: #FFFFFF;
     line-height: 2.55;
     margin-top: 2em; }
+
+.theHotel-image {
+  display: block;
+  width: 100%;
+  height: auto; }
+
+.theHotel-secondary .overlayBlock-bg--image {
+  -webkit-filter: saturate(1);
+          filter: saturate(1); }
+
+.theHotel-secondary-spacer {
+  display: block;
+  height: 0;
+  padding-bottom: 100%; }
+
+.theHotel-primary {
+  text-align: center;
+  color: #ADA3B3;
+  background: #FFFFFF;
+  padding: 2em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
+
+.theHotel a {
+  color: #31303A; }
+
+.theHotel strong {
+  font-weight: 400;
+  color: #31303A; }
+
+.theHotel-leadIn, .theHotel-address {
+  margin: 0; }
+
+.theHotel-details {
+  color: #31303A;
+  margin: 40px auto; }
+
+@media (min-width: 480px) {
+  .theHotel-primary {
+    padding: 3rem; } }
+
+@media (min-width: 960px) {
+  .theHotel {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row nowrap;
+            flex-flow: row nowrap; }
+    .theHotel-primary, .theHotel-secondary {
+      -webkit-box-flex: 1;
+          -ms-flex: 1 0 50%;
+              flex: 1 0 50%; } }
 
 /*# sourceMappingURL=site.css.map*/
