--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -6,9 +6,11 @@
 
 @import "components/branding";
 @import "components/button";
+@import "components/icons";
 @import "components/overlay-block";
 
-@import "modules/hero";
 @import "modules/couple";
-@import "modules/venue";
+@import "modules/hero";
 @import "modules/hotel";
+@import "modules/main-nav";
+@import "modules/venue";
