--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -13,4 +13,5 @@
 @import "modules/hero";
 @import "modules/hotel";
 @import "modules/main-nav";
+@import "modules/party";
 @import "modules/venue";
