--- a/src/style/base/typography.scss
+++ b/src/style/base/typography.scss
@@ -38,7 +38,7 @@ body {
 
 .u-leadIn {
     font-size: $size-xsmall;
-    font-weight: $weight-medium;
+    font-weight: $weight-bold;
     text-transform: uppercase;
     letter-spacing: .7em;
     margin: 0;
