--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -6,7 +6,14 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	
 		<title>Josh &amp; Mere are Getting Married!</title>
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+        <link rel="icon" href="/favicon.png" type="image/x-icon" />
+
+        <meta property="og:url" content="https://joshandmere.com/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Josh & Mere Are Get Married!" />
+        <meta property="og:description" content="10.08.17 - Save the Date!" />
+        <meta property="og:image" content="{{cl "url" "jm-wedding/facebook.jpg" secure=false}}" />
 	
 		<script src="https://use.typekit.net/lcs8lru.js"></script>
 		<script>try{Typekit.load({ async: true });}catch(e){}</script>
