--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -11,7 +11,7 @@
 
         <meta property="og:url" content="https://joshandmere.com/" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Josh & Mere Are Get Married!" />
+        <meta property="og:title" content="Josh & Mere Are Getting Married!" />
         <meta property="og:description" content="10.08.17 - Save the Date!" />
         <meta property="og:image" content="{{cl "url" "jm-wedding/facebook.jpg" secure=false}}" />
 	
